--- a/Kindergarten.html
+++ b/Kindergarten.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunshine Kindergarten</title>
+    <link rel="stylesheet" href="style.css">
    
 </head>
 
@@ -45,14 +46,14 @@
 
         <Activities>
             <h2>Class Activities</h2>
-
-            <img src="placeholder.jpg" alt="Picture 1">
-            <img src="placeholder.jpg" alt="Picture 2">
-            <img src="placeholder.jpg" alt="Picture 3">
-            <img src="placeholder.jpg" alt="Picture 4">
-            <img src="placeholder.jpg" alt="Picture 5">
-            <img src="placeholder.jpg" alt="Picture 6">
-
+           <div class="imgs">
+            <div class="img1"></div>
+            <div class="img2"></div>
+            <div class="img3"></div>
+            <div class="img4"></div>
+            <div class="img5"></div>
+            <div class="img6"></div>
+           </div>
         </Activities>
 
          <!-- Parent announcements or resources  -->
