--- a/Kindergarten.html
+++ b/Kindergarten.html
@@ -94,7 +94,7 @@
          <!-- Parent announcements or resources  -->
 
         <Parent>
-            <h2>Parent Resources</h2>
+            <h2>Parent Resources or announcements </h2>
             <p> parents announcements .</p>
         </Parent>
 
